[package]
name = "weather_check"
version = "0.1.0"
edition = "2021"

[dependencies]
prettytable = "0.10.0"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
